feat(meta): add meta tags for OG and pwa.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flux</title>
+    <meta
+      name="description"
+      content="Flux is an offline-first session-based time tracking PWA designed for focused study and deep work."
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="color-scheme" content="light" />
+    <meta name="application-name" content="Flux" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Flux" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Flux — Offline First Time Tracking PWA"
+    />
+    <meta
+      property="og:description"
+      content="Track focused sessions, manage study time, and stay productive with Flux."
+    />
+    <meta
+      property="og:image"
+      content="https://anuragkumar-git.github.io/flux/pwa.png"
+    />
+    <meta property="og:url" content="https://anuragkumar-git.github.io/flux/" />
+    <meta property="og:site_name" content="Flux" />
+    <link rel="icon" type="image/png" sizes="32x32" href="pwa1.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="pwa.png" />
+    <link rel="apple-touch-icon" href="/pwa.png" />
+    <!-- <link rel="canonical" href="https://anuragkumar-git.github.io/flux/" /> -->
+    <!-- Prevents duplicate indexing. -->
   </head>
   <body>
     <div id="root"></div>
