--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="color-scheme" content="light" />
     <meta name="application-name" content="Flux" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Flux" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta property="og:type" content="website" />
